--- a/prueba.html
+++ b/prueba.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 	</head>
-	<body onload="alert('bienvenido)"/>
+	<body onload="alert('bienvenido')"/>
+		<h1>bienvenido</h1>
 	</body>
 </html>
